...
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Şifre</string>
    <string name="action_sign_in">Giriş</string>
    <string name="action_sign_in_short">Giriş</string>
    <string name="error_invalid_email">Hatalı mail adresi</string>
    <string name="error_invalid_password">Şifre çok kısa</string>
    <string name="error_incorrect_password">Şifre hatalı</string>
    <string name="error_field_required">Gerekli alan</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="button_product_detail">Ürün İncele</string>
    <string name="forgot_password">Şifremi Unuttum?</string>
    <string name="create_new_account">Yeni Hesap Aç</string>
...
